--- a/blocks/about/__info/about__info.css
+++ b/blocks/about/__info/about__info.css
@@ -1,4 +1,17 @@
 .about__info {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+@media screen and (max-width: 493px) {
+  .about__info {
+    grid-template-columns: 1fr;
+    grid-template-rows: 320px 1fr;
+  }
+}
+@media screen and (max-width: 375px) {
+  .about__info {
+    grid-template-columns: 1fr;
+    grid-template-rows: 220px 1fr;
+  }
 }
