--- a/blocks/who/__card-title/who__card-title.css
+++ b/blocks/who/__card-title/who__card-title.css
@@ -8,5 +8,10 @@
 
   color: #333333;
   margin: 0;
-  margin-top: calc(33.74% / (1330 / 100));
+  margin-top: 13px;
+}
+@media screen and (max-width: 768px) {
+  .who__card-title {
+    font-size: calc(17px + 8 * (100vw / 768));
+  }
 }
