--- a/blocks/about/__card/about__card.css
+++ b/blocks/about/__card/about__card.css
@@ -7,3 +7,17 @@
 .about__card:last-child {
   margin: 0;
 }
+@media screen and (max-width: 768px) {
+  .about__card {
+    margin-right: calc(62% / (768 / 100));
+  }
+}
+@media screen and (max-width: 525px) {
+  .about__card {
+    margin-right: 0;
+    margin-bottom: 18px;
+  }
+  .about__card:last-child {
+    margin-bottom: 0;
+  }
+}
