--- a/blocks/about/__cards/about__cards.css
+++ b/blocks/about/__cards/about__cards.css
@@ -3,8 +3,24 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: calc(40% / (1330 / 100));
-  margin-bottom: calc(19% / (1330 / 100));
+  margin-top: 40px;
+  margin-bottom: 19px;
   margin-left: calc(66% / (1330 / 100));
   margin-right: calc(66% / (1330 / 100));
+}
+@media screen and (max-width: 768px) {
+  .about__cards {
+    margin-left: calc(56% / (768 / 100));
+    margin-right: calc(56% / (768 / 100));
+    margin-bottom: calc(47% / (768 / 100));
+  }
+}
+@media screen and (max-width: 525px) {
+  .about__cards {
+    flex-direction: column;
+    margin-left: 52px;
+    margin-right: 48px;
+    margin-top: 30px;
+    margin-bottom: 31px;
+  }
 }
