--- a/blocks/about/__info-button/about__info-button.css
+++ b/blocks/about/__info-button/about__info-button.css
@@ -1,5 +1,5 @@
 .about__info-button {
-  margin-left: calc(62% / (1330 / 100));
+  margin-left: 30px;
   font-style: normal;
   font-weight: 400;
   font-size: calc(12px + 6 * (100vw / 1330));
@@ -11,7 +11,13 @@
   border-radius: 5px;
   padding: 11px 42px;
   cursor: pointer;
+  margin-bottom: calc(84% / (680 / 100));
 }
 .about__info-button:hover {
   background: #1d8937;
+}
+@media screen and (max-width: 768px) {
+  .about__info-button {
+    font-size: calc(12px + 6 * (100vw / 768));
+  }
 }
