--- a/blocks/about/__info-container/about__info-container.css
+++ b/blocks/about/__info-container/about__info-container.css
@@ -1,3 +1,8 @@
 .about__info-container {
   background: #28a745;
 }
+@media screen and (max-width: 493px) {
+  .about__info-container {
+    grid-row: 2;
+  }
+}
