--- a/blocks/about/__info-title/about__info-title.css
+++ b/blocks/about/__info-title/about__info-title.css
@@ -1,11 +1,17 @@
 .about__info-title {
   font-style: normal;
   font-weight: 400;
-  font-size: calc(14px + 6 (100vw / 1330));
+  font-size: calc(14px + 6 * (100vw / 1330));
   line-height: 165%;
   color: #ffffff;
   margin: 0;
   margin-top: calc(172% / (1330 / 100));
-  margin-left: calc(62% / (1330 / 100));
-  margin-bottom: calc(10.4% / (1330 / 100));
+  margin-left: 30px;
+  margin-bottom: 5px;
+}
+@media screen and (max-width: 768px) {
+  .about__info-title {
+    margin-top: calc(30% / (384 / 100));
+    font-size: calc(14px + 6 * (100vw / 768));
+  }
 }
