--- a/blocks/blog/__paragraph/blog__paragraph.css
+++ b/blocks/blog/__paragraph/blog__paragraph.css
@@ -4,7 +4,19 @@
   font-size: calc(12px + 6 * (100vw / 1330));
   line-height: 156%;
   margin: 0;
-  margin-left: calc(72.7% / (1330 / 100));
-  margin-bottom: calc(41.2% / (1330 / 100));
+  margin-left: 30px;
+  margin-bottom: 20px;
+  margin-right: 44px;
   color: #ffffff;
+}
+@media screen and (max-width: 768px) {
+  .blog__paragraph {
+    font-size: calc(12px + 6 * (100vw / 768));
+    margin-right: 39px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .blog__paragraph {
+    font-size: calc(10px + 6 * (100vw / 320));
+  }
 }
