--- a/blocks/blog/__subtitle/blog__subtitle.css
+++ b/blocks/blog/__subtitle/blog__subtitle.css
@@ -4,8 +4,18 @@
   font-size: calc(26px + 12 * (100vw / 1330));
   line-height: 126%;
   margin: 0;
-  margin-left: calc(72.7% / (1330 / 100));
-  margin-bottom: calc(63.2% / (1330 / 100));
+  margin-left: 30px;
+  margin-bottom: 26px;
 
   color: #ffffff;
+}
+@media screen and (max-width: 768px) {
+  .blog__subtitle {
+    font-size: calc(26px + 12 * (100vw / 768));
+  }
+}
+@media screen and (max-width: 320px) {
+  .blog__subtitle {
+    font-size: calc(23px + 12 * (100vw / 320));
+  }
 }
