--- a/blocks/blog/blog.css
+++ b/blocks/blog/blog.css
@@ -1,5 +1,16 @@
 .blog {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-top: calc(48% / (1330 / 100));
+  margin-top: 48px;
+}
+@media screen and (max-width: 494px) {
+  .blog {
+    grid-template-columns: 1fr;
+    grid-template-rows: 320px 1fr;
+  }
+}
+@media screen and (max-width: 370px) {
+  .blog {
+    grid-template-rows: 247px 1fr;
+  }
 }
