--- a/blocks/cases/__subtitle/cases__subtitle.css
+++ b/blocks/cases/__subtitle/cases__subtitle.css
@@ -6,5 +6,15 @@
   text-align: center;
   color: #333333;
   margin: 0;
-  margin-bottom: calc(34% / (1330 / 100));
+  margin-bottom: 35px;
+}
+@media screen and (max-width: 768px) {
+  .cases__subtitle {
+    font-size: calc(24px + 12 * (100vw / 768));
+  }
+}
+@media screen and (max-width: 370px) {
+  .cases__subtitle {
+    font-size: calc(22px + 12 * (100vw / 320));
+  }
 }
