--- a/blocks/cases/__title/cases__title.css
+++ b/blocks/cases/__title/cases__title.css
@@ -8,6 +8,17 @@
 
   color: #333333;
   margin: 0;
-  margin-top: calc(50% / (1330 / 100));
-  margin-bottom: calc(15% / (1330 / 100));
+  margin-top: 50px;
+  margin-bottom: 15px;
+}
+@media screen and (max-width: 768px) {
+  .cases__title {
+    font-size: calc(14px + 6 * (100vw / 768));
+    margin-top: 48px;
+  }
+}
+@media screen and (max-width: 370px) {
+  .cases__title {
+    font-size: calc(12px + 6 * (100vw / 320));
+  }
 }
