--- a/blocks/contact/__name/contact__name.css
+++ b/blocks/contact/__name/contact__name.css
@@ -5,14 +5,23 @@
   line-height: 156%;
   padding-top: 5px;
   padding-bottom: 5px;
-  max-width: 620px;
-  width: 90%;
+
   color: #808080;
   background: #ffffff;
   border: 1px solid #f5f5f5;
   border-radius: 0px;
   margin: 0;
-  margin-left: calc(30% / (665 / 100));
-  margin-bottom: calc(36% / (665 / 100));
-  margin-right: calc(30% / (665 / 100));
+  margin-left: 30px;
+  margin-bottom: 36px;
+  margin-right: 30px;
+}
+@media screen and (max-width: 768px) {
+  .contact__name {
+    font-size: calc(12px + 6 * (100vw / 768));
+  }
+}
+@media screen and (max-width: 320px) {
+  .contact__name {
+    font-size: calc(10px + 6 * (100vw / 320));
+  }
 }
