--- a/blocks/contact/__title/contact__title.css
+++ b/blocks/contact/__title/contact__title.css
@@ -6,6 +6,18 @@
   color: #333333;
   margin: 0;
   margin-top: calc(78% / (665 / 100));
-  margin-left: calc(30% / (665 / 100));
-  margin-bottom: calc(34% / (665 / 100));
+  margin-left: 30px;
+  margin-bottom: 34px;
+  margin-right: 30px;
+}
+@media screen and (max-width: 768px) {
+  .contact__title {
+    font-size: calc(26px + 12 * (100vw / 768));
+    margin-top: 26px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .contact__title {
+    font-size: calc(23px + 12 * (100vw / 320));
+  }
 }
