--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -11,3 +11,15 @@
 .header__link:last-child {
   margin: 0;
 }
+@media screen and (max-width: 768px) {
+  .header__link {
+    margin-right: 18px;
+    font-size: calc(12px + 6 * (100vw / 768));
+  }
+}
+@media screen and (max-width: 320px) {
+  .header__link {
+    margin-right: 12px;
+    font-size: calc(10px + 6 * (100vw / 320));
+  }
+}
