--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -7,5 +7,17 @@
   margin: 0;
 
   color: #e9e9e9;
-  margin-bottom: calc(29% / (1330 / 100));
+  margin-bottom: 29px;
+}
+@media screen and (max-width: 768px) {
+  .header__subtitle {
+    font-size: calc(16px + 6 * (100vw / 768));
+  }
+}
+@media screen and (max-width: 320px) {
+  .header__subtitle {
+    font-size: calc(16px + 6 * (100vw / 320));
+    margin-left: 37px;
+    margin-right: 37px;
+  }
 }
