--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -8,5 +8,18 @@
 
   color: #e9e9e9;
   margin: 0;
-  margin-bottom: calc(25% / (1330 / 100));
+  margin-bottom: 25px;
+}
+@media screen and (max-width: 768px) {
+  .header__title {
+    font-size: calc(40px + 15 * (100vw / 768));
+  }
+}
+@media screen and (max-width: 320px) {
+  .header__title {
+    font-size: 51px;
+    margin-left: 39px;
+    margin-right: 40px;
+    margin-bottom: 16px;
+  }
 }
