--- a/blocks/who/__card-subtitle/who__card-subtitle.css
+++ b/blocks/who/__card-subtitle/who__card-subtitle.css
@@ -8,5 +8,10 @@
 
   color: #333333;
   margin: 0;
-  margin-top: calc(32% / (1330 / 100));
+  margin-top: 12px;
+}
+@media screen and (max-width: 768px) {
+  .who__card-subtitle {
+    font-size: calc(12px + 6 * (100vw / 768));
+  }
 }
