--- a/blocks/who/__cards/who__cards.css
+++ b/blocks/who/__cards/who__cards.css
@@ -1,17 +1,24 @@
 .who__cards {
   display: flex;
   flex-direction: row;
-  margin-top: calc(45% / (1330 / 100));
-  margin-bottom: calc(59% / (1330 / 100));
-  margin-left: calc(30% / (1330 / 100));
-  margin-right: calc(30% / (1330 / 100));
+  margin-top: 45px;
+  margin-bottom: 59px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 .who__card:nth-of-type(2) .who__img {
   max-width: 440px;
   margin-top: calc(-30% / (1330 / 100));
 }
-.who__card:nth-of-type(3) .who__img {
-}
+
 .who__card:nth-of-type(2) .who__card-title {
-  margin-top: -8px;
+  margin-top: 4px;
+}
+@media screen and (max-width: 500px) {
+  .who__cards {
+    flex-direction: column;
+  }
+  .who__card:nth-of-type(2) .who__img {
+    max-width: 428px;
+  }
 }
