--- a/blocks/who/__title/who__title.css
+++ b/blocks/who/__title/who__title.css
@@ -4,10 +4,20 @@
   font-size: calc(14px + 6 * (100vw / 1330));
   line-height: 165%;
   margin: 0;
-  margin-top: calc(49% / (1330 / 100));
-  margin-bottom: calc(16% / (1330 / 100));
+  margin-top: 49px;
+  margin-bottom: 16px;
 
   text-align: center;
 
   color: #333333;
+}
+@media screen and (max-width: 768px) {
+  .who__title {
+    font-size: calc(14px + 6 * (100vw / 768));
+  }
+}
+@media screen and (max-width: 320px) {
+  .who__title {
+    font-size: calc(12px + 6 * (100vw / 320));
+  }
 }
