--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,5 +2,5 @@
   max-width: 1330px;
   width: 100%;
   margin: 0 auto;
-  font-family: "Open+Sans", Arial, Helvetica, sans-serif;
+  font-family: "Open sans", Arial, Helvetica, sans-serif;
 }
