--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,6 @@
 @import url(../vendors/normalize.css);
+@import url(../fonts/font.css);
+
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
