--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,9 @@
   background-size: cover;
   object-position: 0 0;
 }
+@media screen and (max-width: 480) {
+  .header {
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url(../../images/480.svg) no-repeat;
+  }
+}
