--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../../images/bgda.png) no-repeat;
+    url(../../images/123.svg) no-repeat;
 
   background-position: center center;
   background-size: cover;
