--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,26 @@
 .header {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../../images/123.svg) no-repeat;
+    url(../../images/bgda.png) no-repeat;
 
   background-position: center center;
   background-size: cover;
   object-position: 0 0;
 }
-@media screen and (max-width: 480) {
+@media screen and (max-width: 780px) {
+  .header {
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url(../../images/780.svg) no-repeat;
+    background-position: center center;
+    background-size: cover;
+    object-position: 0 0;
+  }
+}
+@media screen and (max-width: 320px) {
   .header {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
       url(../../images/480.svg) no-repeat;
+    background-position: center center;
+    background-size: cover;
+    object-position: 0 0;
   }
 }
