--- a/blocks/cases/__container/cases__container.css
+++ b/blocks/cases/__container/cases__container.css
@@ -8,9 +8,10 @@
   margin-left: 28px;
   margin-right: 28px;
 }
-@media screen and (max-width: 370px) {
+@media screen and (max-width: 470px) {
   .cases__container {
     display: grid;
+    justify-items: center;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   }
