--- a/blocks/who/__cards/who__cards.css
+++ b/blocks/who/__cards/who__cards.css
@@ -1,24 +1,23 @@
 .who__cards {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
   margin-top: 45px;
   margin-bottom: 59px;
   margin-left: 30px;
   margin-right: 30px;
 }
 .who__card:nth-of-type(2) .who__img {
-  max-width: 440px;
   margin-top: calc(-30% / (1330 / 100));
 }
 
 .who__card:nth-of-type(2) .who__card-title {
   margin-top: 4px;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 570px) {
   .who__cards {
     flex-direction: column;
   }
   .who__card:nth-of-type(2) .who__img {
-    max-width: 428px;
   }
 }
